--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,7 @@ author: "Rick O. Gilmore"
 date: "`r Sys.time()`"
 output:
   revealjs::revealjs_presentation:
+    css: styles.css
     self_contained: false
     lib_dir: libs
     incremental: false
@@ -45,6 +46,8 @@ knitr::opts_chunk$set(echo = FALSE)
 ## About me
 
 - Associate Professor of Psychology
+- Founding Director of Human Imaging, PSU [SLEIC](http://imaging.psu.edu)
+- Co-Founder/Co-Director [Databrary.org](http://databrary.org)
 - Ph.D. in cognitive neuroscience, Carnegie Mellon University
 - B.A. in cognitive science, Brown University
 - vision, perception & action, brain development, open science
@@ -66,13 +69,13 @@ knitr::opts_chunk$set(echo = FALSE)
 - 50%
 - 30%
 
-## How do we define what '*actually true*' means?
+## How do we define what "*actually true*" means?
 
 ## Science (and scientists) should be open & transparent about their methods and findings
 
 ### Agree | Disagree
 
-## Science (and scientists) *should* be more open & transparent than they are now
+## Science (and scientists) should be *more* open & transparent than they are now
 
 ### Agree | Disagree
 
@@ -108,7 +111,7 @@ Nature conducted a survey of some 1,600 scientists in 2016. They were asked this
 ---
 
 <div class="centered">
-<img src="http://www.nature.com/polopoly_fs/7.36718.1464174471!/image/reproducibility-graphic-online3.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online3.jpg"" height=600px>
+<img src="http://www.nature.com/polopoly_fs/7.36718.1464174471!/image/reproducibility-graphic-online3.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online3.jpg"" width=700px>
 </br>
 <small>([Baker, 2016](http://doi.org/10.1038/533452a))</small>
 </div>
@@ -161,7 +164,7 @@ Goodman et al. advocate a new lexicon for reproducibility where...
 ---
 
 <div class="centered">
-<img src="http://www.nature.com/polopoly_fs/7.36719.1464174488!/image/reproducibility-graphic-online4.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online4.jpg" height=600px>
+<img src="http://www.nature.com/polopoly_fs/7.36719.1464174488!/image/reproducibility-graphic-online4.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online4.jpg" width=700px>
 </br>
 <small>([Baker, 2016](http://doi.org/10.1038/533452a))</small>
 </div>
@@ -193,7 +196,9 @@ But rather than cast aspersions on other fields, let me own the sins of my own.
 <img src="https://i.pinimg.com/originals/11/99/55/1199557a7cbc80c73dfd6dd58ff19b54.jpg" height=500px/>
 
 <!-- Stepping over bs be like -->
-- BS persuades, but disregards truth (Frankfurt, [*On Bullshit*](https://en.wikipedia.org/wiki/On_Bullshit))
+---
+
+- BS persuades, but (knowingly) disregards truth (Frankfurt, [*On Bullshit*](https://en.wikipedia.org/wiki/On_Bullshit))
 - Science practices and communications attempt to persuade about the truth
 - But if truth value disregarded, overlooked, downplayed, exaggerated...
 
@@ -202,7 +207,7 @@ But rather than cast aspersions on other fields, let me own the sins of my own.
 ---
 
 <div class="centered">
-<img src="http://press.princeton.edu/images/k10970.gif" height=500px>
+<img src="http://press.princeton.edu/images/k10970.gif" height=550px>
 </div>
 
 <div class="notes">
@@ -298,6 +303,8 @@ So, this means that we may not know what we think we know.
 
 Bem, D.J. (2011). Experimental evidence for anomalous retroactive influences on cognition and affect. *Journal of Personality and Social Psychology*, *100*(3), 407-425.
 
+---
+
 > "This article reports 9 experiments, involving more than 1,000 participants, that test for retroactive influence by "time-reversing" well-established psychological effects so that the individual's responses are obtained before the putatively causal stimulus events occur."
 
 <div class="notes">
@@ -315,7 +322,13 @@ Yes, Bem was arguing for some sort of "Minority Report"-like evidence for precog
 </div>
 ---
 
-> "We argue that in order to convince a skeptical audience of a controversial claim, one needs to conduct strictly confirmatory studies and analyze the results with statistical tests that are conservative rather than liberal. We conclude that Bem's *p* values do not indicate evidence in favor of precognition; instead, they indicate that experimental psychologists need to change the way they conduct their experiments and analyze their data."
+> "We argue that in order to convince a skeptical audience of a controversial claim, one needs to conduct strictly confirmatory studies and analyze the results with statistical tests that are conservative rather than liberal..." 
+
+<small>([Wagenmakers et al., 2011](http://doi.org/10.1037/a0022790))</small>
+
+---
+
+> "We conclude that Bem's *p* values do not indicate evidence in favor of precognition; instead, they indicate that experimental psychologists need to change the way they conduct their experiments and analyze their data."
 
 <small>([Wagenmakers et al., 2011](http://doi.org/10.1037/a0022790))</small>
 
@@ -367,10 +380,10 @@ Any number of researchers I've talked with
 
 <div class="centered">
 <video data-autoplay height="550" controls>
-  <source src="https://nyu.databrary.org/slot/11652/307774,376273/asset/47075/download?inline=true" type="video/mp4">
+  <source src="https://nyu.databrary.org/slot/27087/0,372193/asset/119877/download?inline=true" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-<small>([Adolph et al., 2016](https://nyu.databrary.org/volume/232))</small>
+<small>([Adolph et al., 2016](https://nyu.databrary.org/volume/444))</small>
 </div>
 
 ## Embedded in networks
@@ -457,9 +470,25 @@ I urge you to read it.
 
 ## Reproducibility Project: Psychology (RPP)
 
-Open Science Collaboration. (2015). Estimating the reproducibility of psychological science. Science, 349(6251), aac4716–aac4716. American Association for the Advancement of Science. Retrieved February 17, 2017, from http://science.sciencemag.org/content/349/6251/aac4716
+[Open Science Collaboration, 2015](http://science.sciencemag.org/content/349/6251/aac4716)
 
-> "We conducted replications of 100 experimental and correlational studies published in three psychology journals using high-powered designs and original materials when available....The mean effect size (r) of the replication effects (Mr = 0.197, SD = 0.257) was half the magnitude of the mean effect size of the original effects (Mr = 0.403, SD = 0.188), representing a substantial decline. Ninety-seven percent of original studies had significant results (P < .05). Thirty-six percent of replications had significant results; 47% of original effect sizes were in the 95% confidence interval of the replication effect size; 39% of effects were subjectively rated to have replicated the original result; and if no bias in original results is assumed, combining original and replication results left 68% with statistically significant effects."
+---
+
+> "We conducted replications of 100...studies published in three psychology journals using high-powered designs and original materials when available....The mean effect size (r) of the replication effects ...was half the magnitude of the mean effect size of the original effects..."
+
+[Open Science Collaboration, 2015](http://science.sciencemag.org/content/349/6251/aac4716)
+
+---
+
+> "Ninety-seven percent of original studies had significant results (P < .05). Thirty-six percent of replications had significant results"
+
+[Open Science Collaboration, 2015](http://science.sciencemag.org/content/349/6251/aac4716)
+
+---
+
+> "39% of effects were subjectively rated to have replicated the original result..."
+
+[Open Science Collaboration, 2015](http://science.sciencemag.org/content/349/6251/aac4716)
 
 ---
 
@@ -467,13 +496,17 @@ Open Science Collaboration. (2015). Estimating the reproducibility of psychologi
 knitr::include_graphics("https://mfr.osf.io/export?url=https://osf.io/fg4d3/?action=download%26mode=render%26direct%26public_file=True&initialWidth=711&childId=mfrIframe&parentTitle=OSF+%7C+F1+-+EffectSizes.png&parentUrl=https://osf.io/fg4d3/&format=2400x2400.jpeg")
 ```
 
-Camerer, C. F., Dreber, A., Holzmeister, F., Ho, T.-H., Huber, J., Johannesson, M., Kirchler, M., et al. (2018). Evaluating the replicability of social science experiments in Nature and Science between 2010 and 2015. *Nature Human Behaviour*, *1*. Nature Publishing Group. Retrieved August 28, 2018, from https://www.nature.com/articles/s41562-018-0399-z
+[Camerer, et al. 2018](https://www.nature.com/articles/s41562-018-0399-z)
 
 ---
 
 ```{r, fig.cap = 'Camerer et al. Fig 5'}
 knitr::include_graphics("https://mfr.osf.io/export?url=https://osf.io/cefq7/?action=download%26mode=render%26direct%26public_file=True&initialWidth=680&childId=mfrIframe&parentTitle=OSF+%7C+F4+-+PeerBeliefs.png&parentUrl=https://osf.io/cefq7/&format=2400x2400.jpeg")
 ```
+
+## If it's too good to be true, it probably isn't
+
+<https://80000hours.org/psychology-replication-quiz/>
 
 ## Video as data and documentation
 
@@ -526,15 +559,22 @@ But where we take off our opaque glasses and embrace the whole glorious animal.
 <img src="https://amindinfinite.files.wordpress.com/2014/05/bright-future-ahead-sm.jpg" height=450px/>
 </div>
 
-## Keep in touch {.vcenter .flexbox}
+---
 
-### rogilmore@psu.edu
-### [gilmore-lab.github.io](http://gilmore-lab-github.io)
+<video width="800" loop data-autoplay>
+  <source src="https://github.com/gilmore-lab/DEVSEC-2018/blob/master/mov/databrary-splash.mp4?raw=true" type="video/mp4">
+  </video>
+
+rogilmore@psu.edu
+
+<https://gilmore-lab.github.io>
+
+<https://gilmore-lab.github.io/2018-10-16-bs-in-science/>
 
 ## Stack
 
 This talk was produced on `r Sys.Date()` in [RStudio](http://rstudio.com) using R Markdown and the reveal.JS framework.
-The code and materials used to generate the slides may be found at <https://github.com/gilmore-lab/2018-02-14-quant-dev/>.
+The code and materials used to generate the slides may be found at <https://github.com/gilmore-lab/2018-10-16-bs-in-science/>.
 Information about the R Session that produced the code is as follows:
 
 ```{r session-info}
