add manure and shovel pics

--- a/index.Rmd
+++ b/index.Rmd
@@ -555,10 +555,17 @@ But where we take off our opaque glasses and embrace the whole glorious animal.
 
 ---
 
+<img src="http://3.bp.blogspot.com/-hcXiVcmcm5g/Tsv1QlO-kUI/AAAAAAAACF0/vT_UjyHwA4k/s1600/manure.jpg" height=350px/>
+
+<!-- Manure happens; science is a pretty good shovel. -->
+
+---
+
 <div class="centered">
-<img src="https://amindinfinite.files.wordpress.com/2014/05/bright-future-ahead-sm.jpg" height=450px/>
+<img src="http://www.vegetablegardener.com/assets/uploads/posts/14678/DSC_0024_lg.JPG" height=550px/>
 </div>
 
+<!-- Science is a pretty good shovel. -->
 ---
 
 <video width="800" loop data-autoplay>
